add about and footer

--- a/style/main.css
+++ b/style/main.css
@@ -3,3 +3,5 @@
 @import url(./header.css);
 @import url(./collection.css);
 @import url(./bestsellers.css);
+@import url(./about.css);
+@import url(./footer.css);
