--- a/style/about.css
+++ b/style/about.css
@@ -26,6 +26,8 @@ font-size: 16px;
 line-height: 100%;
 color: var(--gray);
 padding: 10px;
+word-break: break-all;
+
 }
 .about__img{
     max-width:100% ;
@@ -33,4 +35,15 @@ padding: 10px;
 .about__img img{
     width: 100%;
     height: 100%;
+}
+@media (max-width: 1488px){
+    .about{
+        padding: 0;
+    }
+    
+@media (max-width: 624px){
+    .about__text-slogan{
+        line-height: 1.5;
+    }
+}
 }
