--- a/style/footer.css
+++ b/style/footer.css
@@ -19,7 +19,7 @@ font-size: 24px;
 line-height: 100%;
 color: var(--black);
 }
-.follow{
+.follow__title{
     color: var(--black);
 }
 .footer__content{
@@ -36,4 +36,27 @@ line-height: 90%;
 .footer__nav-icons{
     display: flex;
     gap: 20px;
+}
+  @media (max-width: 1336px) {
+    .footer__nav-list{
+        gap: 50px;
+    }
+    .footer__nav{
+        
+        flex-direction: column;
+        gap: 50px;
+    }
+}
+@media (max-width: 480px){
+.footer__nav-list{
+     flex-direction: column;
+        align-items: center;
+        gap: 20px;
+}
+}
+@media (max-width: 400px){
+    .follow__title{
+        white-space: nowrap;
+    }
+
 }
